--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>My first Vue app</title>
   <script src="https://unpkg.com/vue@2"></script>
-  <script src="https://cdn.tiny.cloud/1/ekjnhz7itvvgp05ree5d2azoz5hobav2pbtzrkvpe7h18rmp/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
   <div id="app">
-    <p>
+      <div class="blocks">
+          <span v-for="text in this.blocks">
+            <button class="ui button toggle" :class="{active:text.active}" @click="text.active = !text.active">{{ text.name }}</button>
+          </span>
+      </div>
       <div class="text-input">
-        <div v-for="text in this.texts">
+        <div v-for="text in this.blocks">
+            <diV v-if="text.active">
           <input v-model="text.name" class="header-input" :class="text.heading" :placeholder=text.name>
           <textarea cols="100%" rows=5 v-model="text.content"></textarea>
+          </div>
         </div>
      </div>
      <div class="product-preview" >
-       <div v-for="text in this.texts">
+       <div v-for="text in this.blocks">
           <div v-if="text.content" >
             <div :class="text.heading">{{ text.name }}</div>
             <div>{{ text.content }}</div><br>
@@ -25,30 +29,20 @@
     </div>
       <div class="html-output">{{ htmlText }}
       </div>
-    </p>
     </div>
-
-    <script>
-        tinymce.init({
-          selector: 'textarea',
-          menubar: false,
-          plugins: 'lists',
-          toolbar: 'undo redo | bold italic | bullist',
-          browser_spellcheck: true,
-
-        });
-      </script>
     
   <script>
 
     var app = new Vue({
+
       el: '#app',
       data: {
-        texts: {
-          nutshell: { name: "Das Wichtigste in Kürze", content: 'a', heading: 'h2'},
-          details: { name: "Details zu", content: '', heading: 'h2'},
-          specs: { name: "Technische Eigenschaften", content: '', heading: 'h3'},
-          inTheBox: { name: "Lieferumfang", content: '', heading: 'h3'},
+        blocks: {
+          nutshell: { active: false, name: "Das Wichtigste in Kürze", content: '', heading: 'h2'},
+          details: { active: false, name: "Details zu", content: '', heading: 'h2'},
+          review: { active: false, name: "Urteil Veloplus", content: '', heading: 'h2'},
+          specs: { active: false, name: "Technische Eigenschaften", content: '', heading: 'h3'},
+          inTheBox: { active: false, name: "Lieferumfang", content: '', heading: 'h3'},
         }
       },
   computed: {
@@ -72,6 +66,7 @@
       grid-template-rows: auto;
       font-family: Helvetica;
       grid-template-areas: 
+        "blocks blocks"
         "input preview"
         "html html";
       color: #2c3e50;
@@ -87,6 +82,9 @@
         font-family: Open Sans, sans-serif;
         grid-area: preview;
         white-space: pre-wrap;
+      }
+      .blocks {
+          grid-area: blocks;
       }
       .html-output{
         font-family: "courier";
@@ -104,9 +102,12 @@
     button {
       background: none;
       border: solid 1px;
-      border-radius: 2em;
+      border-radius: 5px;
       font: inherit;
       padding: 0.75em 2em;
+    }
+    .active {
+        background-color: red;
     }
     </style>
 </body>
