--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
 <body>
   <div id="app">
       <div class="blocks">
+          <h1>Textblöcke</h1>
           <span v-for="text in this.blocks">
             <button class="ui button toggle" :class="{active:text.active}" @click="text.active = !text.active">{{ text.name }}</button>
           </span>
       </div>
       <div class="text-input">
+          <h1>Input</h1>
         <div v-for="text in this.blocks">
             <diV v-if="text.active">
-          <input v-model="text.name" class="header-input" :class="text.heading" :placeholder=text.name>
-          <textarea cols="100%" rows=5 v-model="text.content"></textarea>
+          <div><input v-model="text.name" class="header-input" :class="text.heading" :placeholder=text.name></div>
+          <div><textarea cols="100%" rows=5 v-model="text.content"></textarea></div>
           </div>
         </div>
      </div>
      <div class="product-preview" >
+                   <h1>Preview</h1>
+
        <div v-for="text in this.blocks">
           <div v-if="text.content" >
             <div :class="text.heading">{{ text.name }}</div>
@@ -27,8 +31,8 @@
           </div>
       </div>
     </div>
-      <div class="html-output">{{ htmlText }}
-      </div>
+      <div class="html-output" :class="{copyflash:this.copyprocess}">{{ htmlText }}</div>
+      <button @click="this.copyCode">Code Kopieren</button>
     </div>
     
   <script>
@@ -43,18 +47,36 @@
           review: { active: false, name: "Urteil Veloplus", content: '', heading: 'h2'},
           specs: { active: false, name: "Technische Eigenschaften", content: '', heading: 'h3'},
           inTheBox: { active: false, name: "Lieferumfang", content: '', heading: 'h3'},
-        }
+        },
+        copyprocess: false,
       },
   computed: {
     htmlText: function () {
       let html = '';
-      for(const text in this.texts){
-        if(this.texts[text].content) {
-          html = html + '<'+ `${this.texts[text].heading}` + '>' + `${this.texts[text].name}` + '</'+ `${this.texts[text].heading}` + '><p>' + `${this.texts[text].content.replace(/\r\n|\r|\n/g,"<br>")}` + '</p><br>';
+      for(const text in this.blocks){
+        if(this.blocks[text].content && this.blocks[text].active) {
+          html = html + '<'+ `${this.blocks[text].heading}` + '>' + `${this.blocks[text].name}` + '</'+ `${this.blocks[text].heading}` + '><p>' + `${this.blocks[text].content.replace(/\r\n|\r|\n/g,"<br>")}` + '</p><br>';
         }
       }
       return html;
     }
+  },
+  methods: {
+      copyCode: function() {
+        this.flashstart();
+        navigator.clipboard.writeText(this.htmlText);
+        setTimeout(this.flashend(), 2000);
+
+      },
+      flashstart: function() {
+          this.copyprocess = true;
+          console.log('true');
+      },
+      flashend: function() {
+          this.copyprocess = false;
+         console.log('false');
+
+      }
   }
   }
     )
@@ -75,6 +97,7 @@
       color: #4fc08d;
     }
       .text-input {
+        padding: 20px;
         grid-area: input;
       }
       
@@ -84,12 +107,15 @@
         white-space: pre-wrap;
       }
       .blocks {
+          padding: 20px;
           grid-area: blocks;
       }
       .html-output{
         font-family: "courier";
         padding: 100px;
-        grid-area: html
+        grid-area: html;
+        background-color: white;
+        color: black;
       }
       .h2 {
         font-size: 24px;
@@ -105,9 +131,14 @@
       border-radius: 5px;
       font: inherit;
       padding: 0.75em 2em;
+      color: grey;
     }
     .active {
-        background-color: red;
+        background-color: black;
+        color: white;
+    }
+    .copyflash {
+        background-color: grey;
     }
     </style>
 </body>
