--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script>var exports = {};</script>
   <script src="https://unpkg.com/vue@2"></script>
   <script src="https://unpkg.com/@tinymce/tinymce-vue@3.2.8/lib/browser/tinymce-vue.min.js"></script>
+  <script src="https://cdn.tiny.cloud/1/ekjnhz7itvvgp05ree5d2azoz5hobav2pbtzrkvpe7h18rmp/tinymce/6/plugins.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
   <div id="app">
