--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <script>var exports = {};</script>
   <script src="https://unpkg.com/vue@2"></script>
   <script src="https://unpkg.com/@tinymce/tinymce-vue@3.2.8/lib/browser/tinymce-vue.min.js"></script>
-  <script src="https://cdn.tiny.cloud/1/ekjnhz7itvvgp05ree5d2azoz5hobav2pbtzrkvpe7h18rmp/tinymce/6/plugins.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
   <div id="app">
@@ -22,6 +21,7 @@
                   <div>                <editor 
                     class="h2"
                     v-model="block.name" 
+                    api-key="ekjnhz7itvvgp05ree5d2azoz5hobav2pbtzrkvpe7h18rmp"
                     :init="{
                         menubar: false,
                         toolbar: false,
@@ -32,6 +32,7 @@
 </div><div>
                 <editor 
                     v-model="block.content" 
+                    api-key="ekjnhz7itvvgp05ree5d2azoz5hobav2pbtzrkvpe7h18rmp"
                     :init="{
                         plugins: 'lists paste',
                         menubar: false,
