--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
           <div>
              <span v-for="block in this.blocks">
-                <button class="ui button blocks toggle" :class={active:block.active} @click="block.active = !block.active">{{ block.name }}</button>
+                <button class="ui button blocks toggle" :class={active:block.active} @click="block.active = !block.active" v-html="block.name">{{ block.name }}</button>
              </span>   
               </div>
       </div>
@@ -34,6 +34,8 @@
                         toolbar: false,
                         browser_spellcheck: true,
                         inline: true,
+                        forced_root_blocks: false,
+                        valid_elements: 'h2,h3',
                     }"
                 />
 </div><div>
@@ -88,7 +90,7 @@
       let html = '';
       for(const text in this.blocks){
         if(this.blocks[text].content && this.blocks[text].active) {
-          html = html + '<'+ `${this.blocks[text].heading}` + '>' + `${this.blocks[text].name}` + '</'+ `${this.blocks[text].heading}` + '><p>' + `${this.blocks[text].content.replace(/\r\n|\r|\n/g,"<br>")}` + '</p><br>';
+          html = html + '<'+ `${this.blocks[text].heading}` + '>' + `${this.blocks[text].name}` + '</'+ `${this.blocks[text].heading}` + '><p>' + `${this.blocks[text].content}` + '</p><br>';
         }
       }
       return html;
