--- a/index.html
+++ b/index.html
@@ -23,9 +23,35 @@
               </div>
       </div>
       <div class="text-input">
-          <div v-for="block in this.blocks">
-              <div v-if="block.active">
-                  <div>                <editor 
+          <div v-for="block,key in this.blocks">
+            <div v-if="block.active">
+              <div v-if="key == 'freestyle'">
+                <editor 
+                    class="padded"
+                    v-model="block.content" 
+                    api-key="ekjnhz7itvvgp05ree5d2azoz5hobav2pbtzrkvpe7h18rmp"
+                    :init="{
+                        plugins: 'lists paste textpattern code',
+                        menubar: false,
+                        toolbar: 'code | undo redo | bold italic | bullist numlist | removeformat | formatselect ',
+                        browser_spellcheck: true,
+                        inline: true,
+                        paste_auto_cleanup_on_paste : true,
+                        paste_remove_styles: true,
+                        paste_remove_styles_if_webkit: true,
+                        paste_strip_class_attributes: true,
+                        block_formats: 'Paragraph=p;Heading 2=h2;Heading 3=h3;',
+                        textpattern_patterns: [
+                            {start: '1. ', cmd: 'InsertOrderedList'},
+                            {start: '* ', cmd: 'InsertUnorderedList'},
+                            {start: '- ', cmd: 'InsertUnorderedList' }
+                            ]
+                    }"
+                />
+              </div>
+              <div v-else>
+                  <div>                
+                  <editor 
                     :class="block.heading"
                     class="padded"
                     v-model="block.name" 
@@ -39,7 +65,7 @@
                         valid_elements: 'h2,h3',
                     }"
                 /> 
-</div><div>
+              </div><div>
                 <editor 
                     class="padded"
                     v-model="block.content" 
@@ -47,7 +73,7 @@
                     :init="{
                         plugins: 'lists paste textpattern',
                         menubar: false,
-                        toolbar: 'undo redo | bold italic | bullist numlist | removeformat ',
+                        toolbar: 'undo redo | bold italic | bullist numlist | removeformat',
                         browser_spellcheck: true,
                         inline: true,
                         paste_auto_cleanup_on_paste : true,
@@ -63,6 +89,7 @@
                 />
                 </div>
             </div>
+          </div>
         </div>
      </div>
       <div class="html-output" >{{ htmlText }}</div>
@@ -82,6 +109,7 @@
             basic: { name: 'Basic' },
             advanced: { name: 'Erweitert' },
             vpBrand: { name: 'Veloplus Eigenproduktion' },
+            freestyle: { name: 'Freestyle' }
         },
         blocks: {
           nutshell: { active: false, name: "Das Wichtigste in Kürze", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et', heading: 'h2'},
@@ -89,14 +117,19 @@
           review: { active: false, name: "Urteil Veloplus", content: '', heading: 'h2'},
           specs: { active: false, name: "Technische Eigenschaften", content: '', heading: 'h3'},
           inTheBox: { active: false, name: "Lieferumfang", content: '', heading: 'h3'},
+          freestyle: {active: false, name: "Freitext", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate', heading: ''}
         },
       },
   computed: {
     htmlText: function () {
       let html = '';
-      for(const text in this.blocks){
+      for(const text in this.blocks) {
         if(this.blocks[text].content && this.blocks[text].active) {
-          html = html + '<'+ `${this.blocks[text].heading}` + '>' + `${this.blocks[text].name}` + '</'+ `${this.blocks[text].heading}` + '><p>' + `${this.blocks[text].content}` + '</p><br>';
+          if(text == 'freestyle'){
+            html = html + '<p>' + `${this.blocks[text].content}` + '</p><br>';
+          } else {
+            html = html + '<'+ `${this.blocks[text].heading}` + '>' + `${this.blocks[text].name}` + '</'+ `${this.blocks[text].heading}` + '><p>' + `${this.blocks[text].content}` + '</p><br>';
+          }
         }
       }
       return html;
@@ -113,6 +146,8 @@
               this.blocks.review.active = false;
               this.blocks.specs.active = false;
               this.blocks.inTheBox.active = false;
+              this.blocks.freestyle.active = false;
+
           }
           if(template == 'advanced') {
               this.blocks.nutshell.active = true;
@@ -120,6 +155,8 @@
               this.blocks.review.active = true;
               this.blocks.specs.active = true;
               this.blocks.inTheBox.active = true;
+              this.blocks.freestyle.active = false;
+
           }
           if(template == 'vpBrand') {
               this.blocks.nutshell.active = false;
@@ -127,6 +164,16 @@
               this.blocks.review.active = false;
               this.blocks.specs.active = true;
               this.blocks.inTheBox.active = true;
+              this.blocks.freestyle.active = false;
+
+          }
+          if(template == 'freestyle') {
+              this.blocks.nutshell.active = false;
+              this.blocks.details.active = false;
+              this.blocks.review.active = false;
+              this.blocks.specs.active = false;
+              this.blocks.inTheBox.active = false;
+              this.blocks.freestyle.active = true;
           }
       }
   }
@@ -156,26 +203,19 @@
       color: #4fc08d;
     }
       .text-input {
-          max-width:720px;
-        font-size: 14px;
+          width:720px;
+        font-size: 18px;
         padding: 20px;
-        line-height:21px;
+        line-height:28px;
         grid-area: input;
           justify-self: center;
 
       }
       
-      .product-preview {
-        font-family: Open Sans, sans-serif;
-        grid-area: preview;
-        font-size: 14px;
-        line-height: 21px;
-        max-width: 700px;
-        white-space: pre-wrap;
-      }
       .blocks {
           padding: 20px;
           grid-area: blocks;
+          justify-self: center;
       }
       .html-output{
         font-family: "courier";
@@ -184,11 +224,12 @@
         background-color: white;
         color: black;
       }
-      .h2 {
+      .h2,h2 {
         font-family: Geogrotesque-Medium, sans-serif;
         font-size: 24px;
+        font-weight:400;
       }
-      .h3 {
+      .h3,h3 {
         font-size: 14px;
         font-weight: 700;
       }
@@ -206,6 +247,7 @@
       border-radius: 5px;
       font: inherit;
       padding: 0.75em 2em;
+      margin: 10px;
       color: grey;
     }
     button.active {
