--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
         </div>
      </div>
       <div class="html-output" >{{ htmlText }}</div>
-      <button @click="this.copyCode">Code Kopieren</button>
+      <button class="copy" @click="this.copyCode">Code Kopieren</button>
     </div>
-    <script>var exports = {};</script>
 
   <script>
     var app = new Vue({
@@ -136,7 +135,8 @@
     },
   },
   methods: {
-      copyCode: function() {
+      copyCode: function(event) {
+        event.currentTarget.innerHTML = "ist Kopiert!";
         navigator.clipboard.writeText(this.htmlText);
       },
       activateTemplate: function(template) {
@@ -195,7 +195,8 @@
       "header header"
         "blocks blocks"
         "input input"
-        "html html";
+        "html html"
+        "copybutton copybutton";
       color: #2c3e50;
         font-family: Open Sans, sans-serif;
     }
@@ -223,6 +224,9 @@
         grid-area: html;
         background-color: white;
         color: black;
+      }
+      .copy {
+        grid-area: copybutton;
       }
       .h2,h2 {
         font-family: Geogrotesque-Medium, sans-serif;
