--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         line-height:28px;
         grid-area: input;
           justify-self: center;
-
+border: black solid 1px;
       }
       
       .blocks {
