--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     });
       let response =  await currentRequest.json();
       console.log(response);
-      return response[0].product.texts.description;
+      return response.data.product.texts.description;
     }
   },
   methods: {
