--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           body: JSON.stringify({
               'query': ' { product(productId: 33001234) {_id texts {description}}}'
       })
-      }).then(response => response.json()).then(data => console.log(data)).then(data => console.log(data.product.texts.description));
+      }).then(response => response.json()).then(data => console.log(data[0].product)));
       },
       activateTemplate: function(template) {
           if(template == 'basic') {
