--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
         navigator.clipboard.writeText(this.htmlText);
       },
       getCurrentText: async function() {
-        let currentDesciption = '';
         fetch('https://api.veloplus.ch/graphql', {
           method: 'POST',
           headers: {
@@ -155,7 +154,9 @@
           body: JSON.stringify({
               'query': ' { product(productId: 33001234) {_id texts {description}}}'
       })
-      }).then(response => response.json()).then(data => console.log(data[0].product));
+      })
+      .then(response => response.json())
+      .then(data => console.log(data));
       },
       activateTemplate: function(template) {
           if(template == 'basic') {
