--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       })
       })
       .then(response => response.json())
-      .then(data => console.log(data));
+      .then(data => console.log(data.data.product.texts.description));
       },
       activateTemplate: function(template) {
           if(template == 'basic') {
