--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         templates: {
             basic: { name: 'Basic' },
             advanced: { name: 'Erweitert' },
-            vpBrand: { name: 'Veloplus Eigenproduktion' },
+            vpBrand: { name: 'Veloplus Eigenprodukte' },
             freestyle: { name: 'Freestyle' }
         },
         blocks: {
