--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             freestyle: { name: 'Freestyle' }
         },
         blocks: {
-          nutshell: { active: false, name: "Das Wichtigste in Kürze", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et', heading: 'h2'},
-          details: { active: false, name: "Details zu", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate', heading: 'h2'},
-          review: { active: false, name: "Urteil Veloplus", content: '', heading: 'h2'},
-          specs: { active: false, name: "Technische Eigenschaften", content: '', heading: 'h3'},
+          nutshell: { active: false, name: "Auf den Punkt gebracht", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et', heading: 'h2'},
+          details: { active: false, name: "Wichtige Eigenschaften", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate', heading: 'h2'},
+          review: { active: false, name: "Das meint Veloplus", content: '', heading: 'h2'},
+          specs: { active: false, name: "Weitere Informationen", content: '', heading: 'h3'},
           inTheBox: { active: false, name: "Lieferumfang", content: '', heading: 'h3'},
           freestyle: {active: false, name: "Freitext", content: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate', heading: ''}
         },
@@ -172,7 +172,7 @@
       },
       activateTemplate: function(template) {
           if(template == 'basic') {
-              this.blocks.nutshell.active = false;
+              this.blocks.nutshell.active = true;
               this.blocks.details.active = true;
               this.blocks.review.active = false;
               this.blocks.specs.active = false;
